update stocks data

--- a/stocks.html
+++ b/stocks.html
@@ -58,8 +58,11 @@
 					          { title: "Company Name"}, 
 					          { title: "Ticker"}, 
 					          { title: "Exchange" }, 
-					          { title: "Sector" }, 
+					          { title: "Sector" },
 					          { title: "Industry" }, 
+					          { title: "Optionable" }, 
+					          { title: "Last Close" }, 
+					          { title: "Beta" }, 
 					          { title: "Market Cap (mil)" },
 					          { title: "Month of Fiscal Yr End" },
 					          { title: "P/E (Trailing 12 Months)"},
