add python html files

--- a/index.html
+++ b/index.html
@@ -92,6 +92,9 @@
                                                 <li><a href="stock_dash.html">Stock Dashboard</a></li>
                                                 <li><a href="bitmex_calc.html" target="_top">Bitmex Crypto Calculator</a></li>
                                                 <li><a href="news.html">News</a></li>
+                                                <li><a href="python_icecream.html">Python Icecream</a></li>
+                                                <li><a href="python_clustering.html">Python Clustering</a></li>
+
                                             </ul>
                                         </div>
                                     </li>
